tests/paczka1/fuzzy1/94334484.err
Error in line 3: S985 S985 79,5
Error in line 9: ZeFiorRK64 A402 45,4
Error in line 11: ZeFiorRK64 S397 46,2
Error in line 12: 8kuBC1T S397 71,6
Error in line 35: 8kuBC1T A402 284,2
Error in line 33: LWvb9nCNRQJ S397 14,3
Error in line 34: IC9Erm A402 95,8
